--- a/Labs Questions/Ak47.md
+++ b/Labs Questions/Ak47.md
@@ -1,1 +1,61 @@
+- Những trường hợp bị cô sấy có thể hỏi chatgpt là an toàn nhất. 
+- Những câu hỏi về việc phải chỉ rõ từng dòng code thì t ko nhớ lắm bên trong code nó tùm lum quá, nếu lên stream discord để mở thì t sẽ chỉ đc chứ h thì t quên cụ r, lười mở code ra quá.
+- Nhớ sử dụng tổ hợp phím "Ctrl + F" để tra keyword cho nó lẹ
+- Tham khảo tất tần tật các bài Lab thông qua repo github của t "https://github.com/akaiwinn/NT118.012_Practice" 
+- Nhớ sửa đổi lại đôi chút giao diện để tránh việc cô phát hiện copy bài nhau. <br> <br>
+-> **Lưu ý:** những câu hỏi dưới đây có thể cô sẽ hỏi hoặc không tùy tâm trạng của cô :))))
 
+## Lab 2
+- sự khác nhau giữa ListView và RecyclerView? Khi nào dùng cái nào? Dùng cái nào thì có lợi hơn(cái này tùy theo cảm nghĩ)?
+- Mở từng bài test chức năng cho cô thấy oke là được
+
+## Lab 3 
+- mở 2 project (project 1 cho 3 bài đầu, project 2 cho bài 4) test cho cô xem oke hết là được
+- Trường hợp hy hữu: Nếu cô muốn sấy thì sẽ hỏi về sự khác nhau giữa sử dụng hiệu ứng từ XML và từ Code? 
+ 	+ giữa XML và Code thì khi nào sử dụng cái nào? Dùng cái nào thì tiện hơn?
+
+## Lab 4
+- Mở lên cho cô xem test thử hết ổn là đc
+- Trường hợp bị sấy:
+  + Nếu thay đổi dữ liệu mà thoát ra vô lại vẫn ko thay đổi thì là do code cô sẽ bắt về chỗ xem lại
+  + Nếu thay đổi dữ liệu mà nó chưa hiển thị thay đổi thì nhớ tắt app đi vào lại thì sẽ thấy thay đổi
+- cô sẽ hỏi: "Tại sao phải thoát ra vào lại nó mới thay đổi?"
+-> Trả lời của t mà cô cho qua: "Dạ tại vì vừa cập nhật xong thì dữ liệu nó sẽ thay đổi trong cơ sở dữ liệu trước nhưng chưa đẩy lên giao diện phải thoát ra vào lại thì giao diện ListView nó sẽ reload và hiện lên"
+
+## Lab 5 và 6 sẽ bị sấy rất nhiều, nhiều nhất có thể lên đến "1 tiếng" :)))
+## Lab 5
+-> Nhớ đọc hết lý thuyết file PDF LAB 5 của cô để hiểu hết vì mọi thông tin cô hỏi đều nằm trong đấy, nhớ đọc hết rồi xem câu hỏi. <br>
+* Những câu hỏi có thể xảy ra: 
+	- Tại sao phải phân luồng sự kiện của app? (Làm vậy để chi? đây là câu cô hỏi t :(( )
+	- Giữa Handler và AsynsTask có gì khác nhau? xài cái nào thì tiện hơn? hoặc cái nào sẽ tốt hơn?
+Những câu hỏi chắc chắn sẽ hỏi (phải chỉ đúng từng dòng code):
+	- Lab5 - Bài 1: 
+		+ Background là nó đang làm cái j (Nhớ đọc phần mô tả ứng dụng để trả lời)? Dòng code nào đang thể hiện nó đang làm (chỉ đúng chỗ thì cô mới hài lòng và chỉ đúng 1 dòng code thôi)? Dòng code đó nằm trong hàm nào?
+Cái hàm đó được gọi bởi thằng nào, nằm trong đoạn nào?
+	- Lab5 - Bài 2:
+		+ Chỉ ra được đoạn code của ForeGround và BackGround. ForeGround được gọi từ hàm nào? Khi nào thì nó được gọi tới? BackGround được gọi từ chỗ nào? Khi nào thì nó được gọi tới?
+		+ Từ bài 2 này thì so với bài 1 cái nào dùng sẽ tốt hơn? Cái nào tối ưu hơn cái nào?
+	- Lab5 - Bài 3: (AsynsTasks)
+		+ Quick Job khác với Slow Job ở chỗ nào? Tại sao nó khác nhau? Chỉ trong code dòng nào đang thực hiện QuickJob dòng nào đang thực hiện SlowJob?
+		+ Từ Bài 3 này có gì khác so với Bài 2 và Bài 1? -> ở đây cô muốn nói về xử lí Synchronize và Asyns tức là Đồng bộ và Bất Đồng bộ trong việc xử lí đa nhiệm và tác vụ ngầm của ứng dụng (có thể hỏi chat gpt để hiểu rõ)
+	- Lab5 - Bài 4:
+		+ Mở lên bật nhạc cho cô nghe, lên nhạc được và ấn dừng nó dừng nhạc được là oke. Cô ko hỏi nhiều bài này
+
+## Lab 6
+-> Nhớ đọc hết lý thuyết file PDF LAB 6 của cô để hiểu hết vì mọi thông tin cô hỏi đều nằm trong đấy, nhớ đọc hết rồi xem câu hỏi. <br>
+* Vào sấy
+	- BroadCast là gì? Có bao nhiêu cách đăng kí BroadCast? (có 2 cách theo "tài liệu của cô")
+	- Về cách đăng kí BroadCast bằng Code: Bài 1 Lab 6
+		+ Chỉ ra dòng nào là nó bắt sự kiện BroadCast lan truyền tín hiệu từ ứng dụng này sang ứng dụng khác?
+		+ CHỈ RA dòng nào là đăng kí BroadCast bằng code? Theo t nhớ ko nhầm thì cứ tìm đoạn nào có chữ registerReceiver là nó
+		+ Chỉ ra dòng nào là nó khởi tạo BroadCast, Dòng nào là nó nhận tín hiệu BroadCast từ ứng dụng khác?
+	- Về cách đăng kí BroadCast bằng Manifest trong Android: Bài 3 Lab 6
+		+ Chỉ ra dòng nào là nó bắt sự kiện BroadCast lan truyền tín hiệu từ ứng dụng này sang ứng dụng khác?
+		+ CHỈ RA dòng nào là đăng kí BroadCast bằng Manifest?
+		+ Tại sao khi tắt đi mà nó vẫn nhận được tín hiệu? -> Trả lời: Do thằng SmS Receiver vẫn chạy khi tắt ứng dụng đi và thằng Manifest được đăng kí rồi thì nó vẫn bắt được tín hiệu (vừa trả lời vừa chỉ trong code)
+		+ Dòng nào là nó nhận tín hiệu để nó biết được có tin nhắn gửi tới?
+
+-> Câu hỏi chung cho cả Lab 6: 
+- Cô hỏi: "Nó có thể bắt tín hiệu BroadCast của chính nó ko??" Câu trả lời là có
+- Cô hỏi: "Làm sao để 1 app nó nhận biết được tín hiệu BroadCast nào, từ đâu để nó bắt? Ko lẽ nó nhận bừa tín hiệu à?"
+				-> Vừa trả lời vừa chỉ trong code cho cô thấy đoạn code đó, t lười mở quá khi nào m cần thì kêu t để t lên discord chỉ cho.
